k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: mtier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: radhe2003/devopsified2-api:26
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: mtier
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: api
