k8s/client.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: mtier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: radhe2003/devopsified2-client:9
          ports:
            - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: client-service
  namespace: mtier
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: client
