k8s/db.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: mtier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-storage
              mountPath: /data/db
      volumes:
        - name: mongo-storage
          persistentVolumeClaim:
            claimName: mongo-pvc  # Create a PVC for persistence

---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: mtier
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongodb
